--- a/cart-login.html
+++ b/cart-login.html
@@ -11,10 +11,12 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Cart Login | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="assets/stylesheets/site-6fe0638b.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
+    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='cart-login base-background'>
-    <header class='top-bar'>
+    <div class='modal__background hidden' id='modal-background'></div>
+    <header class='top-bar' id='top-bar'>
       <div class='top-bar__logo'>
         <a href='/'>
           <!-- / low-fi image of logo for positioning, needs to be updated -->
@@ -24,18 +26,176 @@
       <div class='top-bar__helper-text text--white text--top-bar-helper medium-screen-up'>
         <div class='email-us-link'>
           Need help? Call
-          <a href='#unknown-link'>800-891-8880</a>
+          <a href='tel:+1-800-891-8880'>800-891-8880</a>
           or
-          <a href='#email-us-link' id='email-us-link'>Email Us</a>
+          <a class='modal-open--email-us' href='javascript:void(0)'>Email Us</a>
         </div>
       </div>
+      <!-- / mobile menu open link -->
+      <nav class='top-bar__links small-screen-only top-bar__mobile-menu-link' id='mobile-menu-link'>
+        <i class='fa fa-bars fa-2x'></i>
+      </nav>
     </header>
+    <!-- / mobile menu -->
+    <nav class='top-bar__mobile-menu text--white text--subnav hidden' id='mobile-menu'>
+      <ul>
+        <li>
+          <a href='#menu'>
+            Products
+          </a>
+        </li>
+        <li>
+          <a href='#menu'>
+            Resources
+          </a>
+        </li>
+        <li>
+          <a href='#menu'>
+            About Us
+          </a>
+        </li>
+        <li>
+          <a href='#menu'>
+            <img src='assets/images/icon--account-8b7208ff.png'>
+            My Account
+          </a>
+        </li>
+        <li>
+          <a href='#menu'>
+            <img src='assets/images/icon--cart-69058b39.png'>
+            $1337.00 Cart
+          </a>
+        </li>
+        <li>
+          <a href='#menu'>
+            Contact Us
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- modals -->
+    <div class='modal__positioning'>
+      <div class='modal__container text--body'>
+        <div class='modal__box box--pop-out hidden' id='modal--email-us'>
+          <div class='modal__close-button'>
+            <a class='close-modal' href='javascript:void(0)'>
+              <span class='text--x-button'>X</span>
+            </a>
+          </div>
+          <h2 class='text--headline-2 text--accent alpha'>
+            Contact Us
+          </h2>
+          <form class='modal__form'>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'>
+                Name
+                <span class='text--accent'>*</span>
+              </div>
+              <input class='modal__form-right' type='text'>
+            </label>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'>
+                Email
+                <span class='text--accent'>*</span>
+              </div>
+              <input class='modal__form-right' type='text'>
+            </label>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'>
+                Phone
+              </div>
+              <input class='modal__form-right' type='text'>
+            </label>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'>
+                Subject
+                <span class='text--accent'>*</span>
+              </div>
+              <input class='modal__form-right' type='text'>
+            </label>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'>
+                Your Message
+                <span class='text--accent'>*</span>
+              </div>
+              <textarea class='modal__form-right' rows='6'></textarea>
+            </label>
+            <label class='modal__form-row'>
+              <div class='modal__form-left'></div>
+              <div class='modal__form-right'>
+                <span class='text--accent'>*</span>
+                Required Fields
+              </div>
+            </label>
+            <div class='modal__form-row omega'></div>
+            <div class='modal__form-row'>
+              <submit class='button button--primary modal__form-submit close-modal'>
+                Send Message and Close
+              </submit>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
     <!-- thin-header -->
-    
-    <!-- header -->
-    <header class='header header--thin '>
+    <!-- / initializes optional parameters -->
+    <!-- header-medium -->
+    <header class='header header--medium '>
       <div class='container'>
-        <div class='header__subnav medium-screen-up'></div>
+        <!-- header__subnav -->
+        <nav class='flyout header__subnav text--white text--subnav medium-screen-up'>
+          <ul>
+            <li>
+              <a href='#products'>
+                Products
+              </a>
+              <ul>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href='#cart'>
+                Resources
+              </a>
+              <ul>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href='#contact'>
+                About Us
+              </a>
+              <ul>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+                <li>
+                  <a href='#'>Menu item</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <!-- header__headline -->
         <h1 class='header__headline text--headline text--white'>
           Sign in
         </h1>
@@ -73,9 +233,9 @@
       <div class='small-screen-only' style='margin-bottom: 64px'>
         <div class='email-us-link'>
           Need help? Call
-          <a href='#unknown-link'>800-891-8880</a>
+          <a href='tel:+1-800-891-8880'>800-891-8880</a>
           or
-          <a href='#email-us-link' id='email-us-link'>Email Us</a>
+          <a class='modal-open--email-us' href='javascript:void(0)'>Email Us</a>
         </div>
       </div>
       <!-- registered users form -->
@@ -161,29 +321,34 @@
       </div>
       <div class='footer__logo-row'>
         <div class='footer__logo'>
-          LOGO
+          <img src="assets/images/placeholder--footer-logo-92c66024.png" />
         </div>
         <div class='footer__share-links footer__subnav text--subnav'>
           <ul>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-facebook-7ba66a79.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-twitter-21674135.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-linkedin-4bc6b03f.png" />
+              </a>
+            </li>
+            <li>
+              <a href='#share-logo'>
+                <img src="assets/images/icon--social-youtube-74ed5770.png" />
               </a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
-    <script src="assets/javascripts/site-71d05b95.js" type="text/javascript"></script>
+    <script src="assets/javascripts/site-347fd455.js" type="text/javascript"></script>
   </body>
 </html>
