--- a/home-page.html
+++ b/home-page.html
@@ -11,41 +11,56 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Home Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="assets/stylesheets/site-6fe0638b.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
+    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='home-page base-background'>
-    <header class='top-bar'>
+    <div class='modal__background hidden' id='modal-background'></div>
+    <header class='top-bar' id='top-bar'>
       <div class='top-bar__logo'>
         <a href='/'>
           <!-- / low-fi image of logo for positioning, needs to be updated -->
           <img src='assets/images/placeholder-logo-e2d254a1.png'>
         </a>
       </div>
-      <nav class='top-bar__links text--white text--top-bar-link medium-screen-up'>
+      <nav class='flyout top-bar__links text--white text--top-bar-link medium-screen-up'>
         <ul>
-          <a href='#account'>
-            <li>
+          <li>
+            <a href='#account'>
               <img src='assets/images/icon--account-8b7208ff.png'>
               My Account
-            </li>
-          </a>
-          <a href='#cart'>
-            <li>
+            </a>
+            <ul>
+              <li>
+                <a href='#'>Menu item 1</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 2</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 3</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href='#cart'>
               <img src='assets/images/icon--cart-69058b39.png'>
               $1337.00 Cart
-            </li>
-          </a>
-          <a href='#contact'>
-            <li>
+            </a>
+          </li>
+          <li>
+            <a href='#contact'>
               Contact Us
-            </li>
-          </a>
+            </a>
+          </li>
         </ul>
       </nav>
+      <!-- / mobile menu open link -->
       <nav class='top-bar__links small-screen-only top-bar__mobile-menu-link' id='mobile-menu-link'>
-        <img src='assets/images/icon--mobile-menu-8d85d6da.png'>
+        <i class='fa fa-bars fa-2x'></i>
       </nav>
     </header>
+    <!-- / mobile menu -->
     <nav class='top-bar__mobile-menu text--white text--subnav hidden' id='mobile-menu'>
       <ul>
         <li>
@@ -82,14 +97,65 @@
         </li>
       </ul>
     </nav>
-    <section>
-      <h1>Home Page</h1>
-      <p>Foobar</p>
-    </section>
-    <section>
-      <aside class='sidebar'>What is it about?</aside>
-      <article class='main-area'>Words are symbols that convey the most basic component of an idea.</article>
-    </section>
+    <!-- header--home -->
+    <header class='header header--home'>
+      <div class='container'>
+        <nav class='header__subnav text--white text--subnav medium-screen-up'>
+          <div class='columns-6'>
+            <ul>
+              <li>
+                <a href='#products'>
+                  Products
+                </a>
+              </li>
+              <li>
+                <a href='#cart'>
+                  Resources
+                </a>
+              </li>
+              <li>
+                <a href='#contact'>
+                  About Us
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class='columns-2 shift-1 header--home__top-nav'>
+            <a class='button button--primary button--large button--sucess' href='#foo'>
+              Post a Job
+            </a>
+          </div>
+          <div class='columns-3 header--home__top-nav'>
+            <a class='button button--primary button--large' href='#bar'>
+              Search Candidates
+            </a>
+          </div>
+        </nav>
+        <!-- header__headline -->
+        <div class='header--home__headline'>
+          <h1 class='text--headline text--white'>
+            A CareerBuilder Product
+          </h1>
+          <h2 class='text--subhead text--white'>
+            Find the right business solutions for your company
+          </h2>
+          <a class='header--home__button button button--secondary button--large text--white'>
+            Learn More
+          </a>
+        </div>
+      </div>
+    </header>
+    <!-- product image -->
+    <div class='carosel--container large-screen-only'>
+      <div class='carosel--frame-image'>
+        <img src="assets/images/carosel--laptop-cce908f6.png" />
+      </div>
+    </div>
+    <div class='container text--body'>
+      <div class='columns-12'>
+        WORK IN PROGRESS! WORK IN PROGRESS! WORK IN PROGRESS! WORK IN PROGRESS! WORK IN PROGRESS!
+      </div>
+    </div>
     <!-- global footer -->
     <footer class='footer container text--body large-screen-only'>
       <div class='footer__subnav text--subnav'>
@@ -123,29 +189,34 @@
       </div>
       <div class='footer__logo-row'>
         <div class='footer__logo'>
-          LOGO
+          <img src="assets/images/placeholder--footer-logo-92c66024.png" />
         </div>
         <div class='footer__share-links footer__subnav text--subnav'>
           <ul>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-facebook-7ba66a79.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-twitter-21674135.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-linkedin-4bc6b03f.png" />
+              </a>
+            </li>
+            <li>
+              <a href='#share-logo'>
+                <img src="assets/images/icon--social-youtube-74ed5770.png" />
               </a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
-    <script src="assets/javascripts/site-71d05b95.js" type="text/javascript"></script>
+    <script src="assets/javascripts/site-347fd455.js" type="text/javascript"></script>
   </body>
 </html>
