--- a/product-page.html
+++ b/product-page.html
@@ -11,41 +11,56 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Product Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="assets/stylesheets/site-6fe0638b.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
+    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='product-page base-background'>
-    <header class='top-bar'>
+    <div class='modal__background hidden' id='modal-background'></div>
+    <header class='top-bar' id='top-bar'>
       <div class='top-bar__logo'>
         <a href='/'>
           <!-- / low-fi image of logo for positioning, needs to be updated -->
           <img src='assets/images/placeholder-logo-e2d254a1.png'>
         </a>
       </div>
-      <nav class='top-bar__links text--white text--top-bar-link medium-screen-up'>
+      <nav class='flyout top-bar__links text--white text--top-bar-link medium-screen-up'>
         <ul>
-          <a href='#account'>
-            <li>
+          <li>
+            <a href='#account'>
               <img src='assets/images/icon--account-8b7208ff.png'>
               My Account
-            </li>
-          </a>
-          <a href='#cart'>
-            <li>
+            </a>
+            <ul>
+              <li>
+                <a href='#'>Menu item 1</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 2</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 3</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href='#cart'>
               <img src='assets/images/icon--cart-69058b39.png'>
               $1337.00 Cart
-            </li>
-          </a>
-          <a href='#contact'>
-            <li>
+            </a>
+          </li>
+          <li>
+            <a href='#contact'>
               Contact Us
-            </li>
-          </a>
+            </a>
+          </li>
         </ul>
       </nav>
+      <!-- / mobile menu open link -->
       <nav class='top-bar__links small-screen-only top-bar__mobile-menu-link' id='mobile-menu-link'>
-        <img src='assets/images/icon--mobile-menu-8d85d6da.png'>
+        <i class='fa fa-bars fa-2x'></i>
       </nav>
     </header>
+    <!-- / mobile menu -->
     <nav class='top-bar__mobile-menu text--white text--subnav hidden' id='mobile-menu'>
       <ul>
         <li>
@@ -82,73 +97,142 @@
         </li>
       </ul>
     </nav>
-    <!-- / large-header -->
-    
-    <!-- header-large -->
-    <header class='header header--large no-bottom-margin'>
-      <div class='container'>
-        <nav class='header__subnav text--white text--subnav medium-screen-up'>
-          <ul>
-            <li>
-              <a href='#products'>
-                Products
-              </a>
-            </li>
-            <li>
-              <a href='#cart'>
-                Resources
-              </a>
-            </li>
-            <li>
-              <a href='#contact'>
-                About Us
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <!-- header__headline -->
-        <div class='header--large__headline'>
-          <h1 class='text--headline text--white'>
-            Product Title
-          </h1>
-          <h2 class='text--subhead text--white'>
-            Placeholder Reach more candidates in less time with a product description
-          </h2>
-        </div>
-        <!-- product image -->
-        <div class='header--large__image large-screen-only'>
-          <img src="assets/images/placeholder--product-image-0a95efbe.png" />
-        </div>
-      </div>
-    </header>
-    <div class='container text--body'>
-      <nav>
+    <!-- / fixed, hidden until scroll -->
+    <div class='sticky-nav text--body large-screen-only'>
+      <nav class='container'>
         <!-- / four links across top -->
         <div class='product-subnav text--subnav'>
           <div class='product-subnav__left medium-screen-up'>
             <ul>
               <li>
-                <a href='#overview'>Overview</a>
+                <a href='#overview-link-anchor'>Overview</a>
               </li>
               <li>
-                <a href='#white-papers'>White Papers</a>
+                <a href='#white-papers-link-anchor'>White Papers</a>
               </li>
               <li>
-                <a href='#features'>Features</a>
+                <a href='#features-link-anchor'>Features</a>
               </li>
               <li>
-                <a href='#videos'>Videos</a>
+                <a href='#videos-link-anchor'>Videos</a>
               </li>
             </ul>
           </div>
           <!-- / demo button on right side -->
           <div class='product-subnav__right'>
-            <a class='button button--primary' href='#demo'>
+            <a class='button button--primary' href='#demo-link-anchor'>
               Request a Demo
             </a>
           </div>
         </div>
       </nav>
+    </div>
+    <!-- / layer over sticky nav, scrolls away -->
+    <div class='sticky-nav__top-container'>
+      <!-- / large-header -->
+      <!-- / initializes optional parameters -->
+      <!-- header-large -->
+      <header class='header header--large no-bottom-margin'>
+        <div class='container'>
+          <nav class='flyout header__subnav text--white text--subnav medium-screen-up'>
+            <ul>
+              <li>
+                <a href='#products'>
+                  Products
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href='#cart'>
+                  Resources
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href='#contact'>
+                  About Us
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+          <!-- header__headline -->
+          <div class='header--large__headline'>
+            <h1 class='text--headline text--white'>
+              Product Title
+            </h1>
+            <h2 class='text--subhead text--white'>
+              Placeholder Reach more candidates in less time with a product description
+            </h2>
+          </div>
+          <!-- product image -->
+          <div class='header--large__image large-screen-only'>
+            <img src="assets/images/placeholder--product-image-0a95efbe-0a95efbe.png" />
+          </div>
+        </div>
+      </header>
+      <div class='container text--body' id='overview-link-anchor'>
+        <!-- / displays in page flow -->
+        <nav>
+          <!-- / four links across top -->
+          <div class='product-subnav text--subnav'>
+            <div class='product-subnav__left medium-screen-up'>
+              <ul>
+                <li>
+                  <a href='#overview-link-anchor'>Overview</a>
+                </li>
+                <li>
+                  <a href='#white-papers-link-anchor'>White Papers</a>
+                </li>
+                <li>
+                  <a href='#features-link-anchor'>Features</a>
+                </li>
+                <li>
+                  <a href='#videos-link-anchor'>Videos</a>
+                </li>
+              </ul>
+            </div>
+            <!-- / demo button on right side -->
+            <div class='product-subnav__right'>
+              <a class='button button--primary' href='#demo-link-anchor'>
+                Request a Demo
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class='container text--body'>
       <!-- / overview -->
       <section class='product-detail box--divider-bottom' id='overview'>
         <h2 class='product-detail__headline text--headline-2'>
@@ -164,6 +248,7 @@
           <p>
             Vestibulum lobortis leo sit amet diam pretium mattis. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum. Vivamus vehicula vel neque eu convallis.
           </p>
+          <span id='white-papers-link-anchor'></span>
         </div>
       </section>
       <!-- / white papers -->
@@ -189,13 +274,14 @@
               <a href='#white-paper'>
                 <div class='text--link-list__arrow product-detail__arrow'>></div>
                 Pellentesque faucibus arcu eu sagittis condimentum, conveniently unnamed sources say.
+                <span id='features-link-anchor'></span>
               </a>
             </li>
           </ul>
         </div>
       </section>
       <!-- / features -->
-      <section class='product-detail box--divider-bottom' id='features'>
+      <section class='product-detail box--divider-bottom'>
         <h2 class='product-detail__headline text--headline-2'>
           Features
         </h2>
@@ -203,28 +289,29 @@
         <!-- / features - desktop -->
         <div>
           <div class='feature-block'>
-            <img src="assets/images/placeholder-circle-1-d5a50796.png" />
+            <img src="assets/images/placeholder-circle-1-d5a50796-d5a50796.png" />
             <h4>True Grit</h4>
             <p class='text--grey text--details'>Nunc laoreet dignissim nisl, eu gravida eros congue ac.</p>
             <a class='button button--secondary' href='1'>Learn More</a>
           </div>
           <div class='feature-block'>
-            <img src="assets/images/placeholder-circle-2-03bdd057.png" />
+            <img src="assets/images/placeholder-circle-2-03bdd057-03bdd057.png" />
             <h4>Makes Own Gravy</h4>
             <p class='text--grey text--details'>Nuuuuuuuuuuuunc laoreet dignissim nisl, eu graaaaaaaaaaaavida eros congue ac.</p>
             <a class='button button--secondary' href='2'>Learn More</a>
           </div>
           <div class='feature-block'>
-            <img src="assets/images/placeholder-circle-2-03bdd057.png" />
+            <img src="assets/images/placeholder-circle-2-03bdd057-03bdd057.png" />
             <h4>Suddenly, 20% More Cowbell Even if Line Wraps</h4>
             <p class='text--grey text--details'>Nunc laoreet dignissim nisl, eu gravida eros congue ac.</p>
             <a class='button button--secondary' href='2'>Learn More</a>
           </div>
           <div class='feature-block'>
-            <img src="assets/images/placeholder-circle-3-16ab45f5.png" />
+            <img src="assets/images/placeholder-circle-3-16ab45f5-16ab45f5.png" />
             <h4>Updog</h4>
             <p class='text--grey text--details'>Nunc laoreet dignissim nisl, eu gravida eros congue ac.</p>
             <a class='button button--secondary' href='2'>Learn More</a>
+            <span id='videos-link-anchor'></span>
           </div>
         </div>
       </section>
@@ -236,16 +323,17 @@
         <div class='product-detail__body'>
           <div class='product-detail__video-block'>
             <!-- / VIDEO THUMBNAIL SHOULD BE 240px WIDE, HEIGHT CAN VARY -->
-            <img src="assets/images/placeholder-video-4d02de9f.png" />
+            <img src="assets/images/placeholder-video-4d02de9f-4d02de9f.png" />
             <h4>Video Title About How To Get More Cowbell</h4>
           </div>
           <div class='product-detail__video-block'>
-            <img src="assets/images/placeholder-video-4d02de9f.png" />
+            <img src="assets/images/placeholder-video-4d02de9f-4d02de9f.png" />
             <h4>Updog Video</h4>
           </div>
           <div class='product-detail__video-block'>
-            <img src="assets/images/placeholder-video-4d02de9f.png" />
+            <img src="assets/images/placeholder-video-4d02de9f-4d02de9f.png" />
             <h4>Video Title About 50% Higher Conversion with More Cowbell</h4>
+            <span id='demo-link-anchor'></span>
           </div>
         </div>
       </section>
@@ -340,29 +428,34 @@
       </div>
       <div class='footer__logo-row'>
         <div class='footer__logo'>
-          LOGO
+          <img src="assets/images/placeholder--footer-logo-92c66024.png" />
         </div>
         <div class='footer__share-links footer__subnav text--subnav'>
           <ul>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-facebook-7ba66a79.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-twitter-21674135.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-linkedin-4bc6b03f.png" />
+              </a>
+            </li>
+            <li>
+              <a href='#share-logo'>
+                <img src="assets/images/icon--social-youtube-74ed5770.png" />
               </a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
-    <script src="assets/javascripts/site-71d05b95.js" type="text/javascript"></script>
+    <script src="assets/javascripts/site-347fd455.js" type="text/javascript"></script>
   </body>
 </html>
