--- a/reading-page.html
+++ b/reading-page.html
@@ -11,41 +11,56 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Reading Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link href="assets/stylesheets/site-6fe0638b.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
+    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='reading-page base-background'>
-    <header class='top-bar'>
+    <div class='modal__background hidden' id='modal-background'></div>
+    <header class='top-bar' id='top-bar'>
       <div class='top-bar__logo'>
         <a href='/'>
           <!-- / low-fi image of logo for positioning, needs to be updated -->
           <img src='assets/images/placeholder-logo-e2d254a1.png'>
         </a>
       </div>
-      <nav class='top-bar__links text--white text--top-bar-link medium-screen-up'>
+      <nav class='flyout top-bar__links text--white text--top-bar-link medium-screen-up'>
         <ul>
-          <a href='#account'>
-            <li>
+          <li>
+            <a href='#account'>
               <img src='assets/images/icon--account-8b7208ff.png'>
               My Account
-            </li>
-          </a>
-          <a href='#cart'>
-            <li>
+            </a>
+            <ul>
+              <li>
+                <a href='#'>Menu item 1</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 2</a>
+              </li>
+              <li>
+                <a href='#'>Menu item 3</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href='#cart'>
               <img src='assets/images/icon--cart-69058b39.png'>
               $1337.00 Cart
-            </li>
-          </a>
-          <a href='#contact'>
-            <li>
+            </a>
+          </li>
+          <li>
+            <a href='#contact'>
               Contact Us
-            </li>
-          </a>
+            </a>
+          </li>
         </ul>
       </nav>
+      <!-- / mobile menu open link -->
       <nav class='top-bar__links small-screen-only top-bar__mobile-menu-link' id='mobile-menu-link'>
-        <img src='assets/images/icon--mobile-menu-8d85d6da.png'>
+        <i class='fa fa-bars fa-2x'></i>
       </nav>
     </header>
+    <!-- / mobile menu -->
     <nav class='top-bar__mobile-menu text--white text--subnav hidden' id='mobile-menu'>
       <ul>
         <li>
@@ -82,7 +97,220 @@
         </li>
       </ul>
     </nav>
-    <h1>Reading Page</h1>
+    <!-- / reading-header -->
+    
+    <!-- / initializes optional parameters -->
+    <!-- header-medium -->
+    <header class='header header--medium header--reading '>
+      <div class='container'>
+        <!-- header__subnav -->
+        <div class='header--reading__subnav'>
+          <nav class='flyout header__subnav text--white text--subnav medium-screen-up'>
+            <ul>
+              <li>
+                <a href='#products'>
+                  Products
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href='#cart'>
+                  Resources
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href='#contact'>
+                  About Us
+                </a>
+                <ul>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                  <li>
+                    <a href='#'>Menu item</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <!-- header__headline -->
+        <h1 class='header__headline text--headline text--white header--reading__headline'>
+          H1 Reading Page Title
+        </h1>
+      </div>
+    </header>
+    <div class='container text--body'>
+      <div class='reading'>
+        <!-- / main text -->
+        <section class='reading__section box--divider-bottom'>
+          <h2 class='text--accent text--headline-2'>
+            Headline 2 style
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum ante sem, at dictum nibh imperdiet ut. Sed a elit at justo pulvinar molestie. Pellentesque commodo metus nec ante ullamcorper, nec vulputate ipsum mattis. Phasellus pellentesque et dui sed accumsan. Morbi accumsan consequat pellentesque. Integer venenatis commodo orci id varius. Vestibulum tempus luctus diam, eget sollicitudin dui cursus quis. Sed sed vestibulum ipsum. Curabitur vitae arcu libero.
+          </p>
+          <p>
+            Ut venenatis rhoncus leo, ultricies rhoncus tellus ornare a. Mauris a velit est. Pellentesque neque elit, sagittis tristique iaculis id, rhoncus nec diam. Nunc laoreet dignissim nisl, eu gravida eros congue ac. Etiam egestas commodo nibh molestie lacinia.
+          </p>
+          <p>
+            Vestibulum lobortis leo sit amet diam pretium mattis. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum. Vivamus vehicula vel neque eu convallis.
+          </p>
+          <h4 class='text--headline-4'>
+            Headline 4 style
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum ante sem, at dictum nibh imperdiet ut. Sed a elit at justo pulvinar molestie. Pellentesque commodo metus nec ante ullamcorper, nec vulputate ipsum mattis. Phasellus pellentesque et dui sed accumsan. Morbi accumsan consequat pellentesque. Integer venenatis commodo orci id varius. Vestibulum tempus luctus diam, eget sollicitudin dui cursus quis. Sed sed vestibulum ipsum. Curabitur vitae arcu libero.
+          </p>
+          <p>
+            Ut venenatis rhoncus leo, ultricies rhoncus tellus ornare a. Mauris a velit est. Pellentesque neque elit, sagittis tristique iaculis id, rhoncus nec diam. Nunc laoreet dignissim nisl, eu gravida eros congue ac. Etiam egestas commodo nibh molestie lacinia.
+          </p>
+          <p>
+            Vestibulum lobortis leo sit amet diam pretium mattis. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum. Vivamus vehicula vel neque eu convallis.
+          </p>
+          <ul>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+          </ul>
+          <p>
+            <a href='#link'>Link text here</a>
+          </p>
+          <div class='columns-5'>
+            <a class='button button--primary button--large'>Read More</a>
+          </div>
+          <p>
+            <a class='button button--secondary'>Read More</a>
+          </p>
+        </section>
+        <!-- / image grid -->
+        
+        <section class='reading__image-grid reading__section box--divider-bottom'>
+          <h4 class='text--headline-4 reading__subhead'>
+            Image Grid
+          </h4>
+          <div class='reading__image-block'>
+            <div class='reading__image-container'>
+              <img src="assets/images/placeholder--headshot-1-fcb2fb01-fcb2fb01.jpg" />
+            </div>
+            <div class='caption'>
+              <p>Kaylee Frye</p>
+              <p class='text--ghost'>Director of Engineering</p>
+            </div>
+          </div>
+          <div class='reading__image-block two-column-omega'>
+            <div class='reading__image-container'>
+              <img src="assets/images/placeholder--headshot-2-efc54106-efc54106.jpg" />
+            </div>
+            <div class='caption'>
+              <p>Another Headshot</p>
+              <p class='text--ghost'>Sales Manager</p>
+            </div>
+          </div>
+          <div class='reading__image-block'>
+            <div class='reading__image-container'>
+              <img src="assets/images/placeholder--headshot-1-fcb2fb01-fcb2fb01.jpg" />
+            </div>
+            <div class='caption'>
+              <p>Kaylee Frye</p>
+              <p class='text--ghost'>Director of Engineering</p>
+            </div>
+          </div>
+          <div class='reading__image-block'>
+            <div class='reading__image-container'>
+              <img src="assets/images/placeholder--headshot-2-efc54106-efc54106.jpg" />
+            </div>
+            <div class='caption'>
+              <p>Another Headshot</p>
+              <p class='text--ghost'>Sales Manager</p>
+            </div>
+          </div>
+        </section>
+        <!-- / products -->
+        <section>
+          <!-- / product list -->
+          <section class='product-detail box--divider-bottom' id='products'>
+            <h2 class='product-detail__headline text--headline-2'>
+              Products
+            </h2>
+            <div class='product-detail__body'>
+              <div class='text--link-list'>
+                <ul>
+                  <li class='alpha'>
+                    <a href='#product1'>
+                      <div class='text--link-list__arrow product-detail__arrow'>></div>
+                      <h3 style='text--headline-3 text--accent'>Career Builder</h3>
+                    </a>
+                    <p>Hellentesque faucibus arcu eu.</p>
+                  </li>
+                  <li>
+                    <a href='#product2'>
+                      <div class='text--link-list__arrow product-detail__arrow'>></div>
+                      <h3 style='text--headline-3 text--accent'>Product Title</h3>
+                    </a>
+                    <p>Hellentesque sagittis condimentum, conveniently unnamed sources say.</p>
+                  </li>
+                  <li class='omega'>
+                    <a href='#product3'>
+                      <div class='text--link-list__arrow product-detail__arrow'>></div>
+                      <h3 style='text--headline-3 text--accent'>Career Builder Product Title, Type 34</h3>
+                    </a>
+                    <p>Arcu eu sagittis condimentum, conveniently unnamed sources say.</p>
+                  </li>
+                </ul>
+              </div>
+              <a class='button button--secondary' style='margin-top: 10px'>More Products</a>
+            </div>
+          </section>
+        </section>
+        <!-- / contact us -->
+        <section class='reading__section'>
+          <h4 class='text--headline-4 reading__subhead'>
+            Contact Us
+          </h4>
+          <p>Qui nostrud exercitation ullamco laboris nisis ut aliquiop.</p>
+          <div class='reading__contact'>
+            <div class='reading__contact__name'>Michael Erwin</div>
+            <div class='reading__contact__detail'>phone: 773-555-1164</div>
+            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+          </div>
+          <div class='reading__contact'>
+            <div class='reading__contact__name'>Michael Erwin</div>
+            <div class='reading__contact__detail'>phone: 773-555-1164</div>
+            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+          </div>
+          <div class='reading__contact omega'>
+            <div class='reading__contact__name'>Michael Erwin</div>
+            <div class='reading__contact__detail'>phone: 773-555-1164</div>
+            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+          </div>
+        </section>
+      </div>
+    </div>
     <!-- global footer -->
     <footer class='footer container text--body large-screen-only'>
       <div class='footer__subnav text--subnav'>
@@ -116,29 +344,34 @@
       </div>
       <div class='footer__logo-row'>
         <div class='footer__logo'>
-          LOGO
+          <img src="assets/images/placeholder--footer-logo-92c66024.png" />
         </div>
         <div class='footer__share-links footer__subnav text--subnav'>
           <ul>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-facebook-7ba66a79.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-twitter-21674135.png" />
               </a>
             </li>
             <li>
               <a href='#share-logo'>
-                Sharelink
+                <img src="assets/images/icon--social-linkedin-4bc6b03f.png" />
+              </a>
+            </li>
+            <li>
+              <a href='#share-logo'>
+                <img src="assets/images/icon--social-youtube-74ed5770.png" />
               </a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
-    <script src="assets/javascripts/site-71d05b95.js" type="text/javascript"></script>
+    <script src="assets/javascripts/site-347fd455.js" type="text/javascript"></script>
   </body>
 </html>
