--- a/product-page.html
+++ b/product-page.html
@@ -12,7 +12,7 @@
     <title>Product Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/site-dfb27e61.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='product-page base-background'>
     <div class='modal__background hidden' id='modal-background'></div>
@@ -297,13 +297,13 @@
           <div class='feature-block'>
             <img src="assets/images/placeholder-circle-2-03bdd057-03bdd057.png" />
             <h4>Makes Own Gravy</h4>
-            <p class='text--grey text--details'>Nuuuuuuuuuuuunc laoreet dignissim nisl, eu graaaaaaaaaaaavida eros congue ac.</p>
+            <p class='text--grey text--details'>Nuuuuuuuuuuuunc laoreet dignissim nisl.</p>
             <a class='button button--secondary' href='2'>Learn More</a>
           </div>
           <div class='feature-block'>
             <img src="assets/images/placeholder-circle-2-03bdd057-03bdd057.png" />
-            <h4>Suddenly, 20% More Cowbell Even if Line Wraps</h4>
-            <p class='text--grey text--details'>Nunc laoreet dignissim nisl, eu gravida eros congue ac.</p>
+            <h4>Suddenly, 20% More Cowbell</h4>
+            <p class='text--grey text--details'>Nunc laoreet dig lorem lorem lorem nissim nisl.</p>
             <a class='button button--secondary' href='2'>Learn More</a>
           </div>
           <div class='feature-block'>
@@ -346,12 +346,12 @@
           <form class='form--large request-demo'>
             <!-- / Use div to indicate new row. Class "clear-fix" if required. -->
             <div>
-              <label class='columns-5'>
+              <label class='columns-6'>
                 First Name
                 <br>
                 <input type='text'>
               </label>
-              <label class='columns-6 shift-1'>
+              <label class='columns-6'>
                 Last Name
                 <br>
                 <input type='text'>
@@ -365,12 +365,12 @@
               </label>
             </div>
             <div>
-              <label class='columns-5'>
+              <label class='columns-6'>
                 Email Address
                 <br>
                 <input type='text'>
               </label>
-              <label class='columns-6 shift-1'>
+              <label class='columns-6'>
                 Phone Number
                 <br>
                 <input type='text'>
@@ -386,7 +386,7 @@
                 <textarea rows='4' style='width: 100%;'></textarea>
               </label>
             </div>
-            <div class='columns-4 shift-8' style='text-align: right; margin-right: 0'>
+            <div class='columns-4 shift-8 request-demo__submit'>
               <submit class='button button--primary'>
                 Submit
               </submit>
