--- a/reading-page.html
+++ b/reading-page.html
@@ -12,7 +12,7 @@
     <title>Reading Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/site-dfb27e61.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='reading-page base-background'>
     <div class='modal__background hidden' id='modal-background'></div>
@@ -168,9 +168,6 @@
       <div class='reading'>
         <!-- / main text -->
         <section class='reading__section box--divider-bottom'>
-          <h2 class='text--accent text--headline-2'>
-            Headline 2 style
-          </h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum ante sem, at dictum nibh imperdiet ut. Sed a elit at justo pulvinar molestie. Pellentesque commodo metus nec ante ullamcorper, nec vulputate ipsum mattis. Phasellus pellentesque et dui sed accumsan. Morbi accumsan consequat pellentesque. Integer venenatis commodo orci id varius. Vestibulum tempus luctus diam, eget sollicitudin dui cursus quis. Sed sed vestibulum ipsum. Curabitur vitae arcu libero.
           </p>
@@ -180,6 +177,9 @@
           <p>
             Vestibulum lobortis leo sit amet diam pretium mattis. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum. Vivamus vehicula vel neque eu convallis.
           </p>
+          <h2 class='text--accent text--headline-2'>
+            Headline 2 style
+          </h2>
           <h4 class='text--headline-4'>
             Headline 4 style
           </h4>
@@ -192,15 +192,23 @@
           <p>
             Vestibulum lobortis leo sit amet diam pretium mattis. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum. Vivamus vehicula vel neque eu convallis.
           </p>
-          <ul>
-            <li>List Item</li>
-            <li>List Item</li>
-            <li>List Item</li>
-          </ul>
+          <p>
+            <strong>
+              <a href='#foo'>Link text here</a>
+            </strong>
+          </p>
+          <p>
+            Hello text is here. Duis congue id nibh eget laoreet. Etiam tincidunt tellus magna, vitae finibus justo pharetra sit amet. Pellentesque faucibus arcu eu sagittis condimentum. Donec hendrerit venenatis massa sit amet elementum.
+            <ul>
+              <li>List Item</li>
+              <li>List Item</li>
+              <li>List Item</li>
+            </ul>
+          </p>
           <p>
             <a href='#link'>Link text here</a>
           </p>
-          <div class='columns-5'>
+          <div class='columns-4'>
             <a class='button button--primary button--large'>Read More</a>
           </div>
           <p>
@@ -270,7 +278,7 @@
                   <li>
                     <a href='#product2'>
                       <div class='text--link-list__arrow product-detail__arrow'>></div>
-                      <h3 style='text--headline-3 text--accent'>Product Title</h3>
+                      <h3 class='text--headline-3 text--accent'>Product Title</h3>
                     </a>
                     <p>Hellentesque sagittis condimentum, conveniently unnamed sources say.</p>
                   </li>
@@ -283,7 +291,7 @@
                   </li>
                 </ul>
               </div>
-              <a class='button button--secondary' style='margin-top: 10px'>More Products</a>
+              <a class='button button--secondary' style='margin-top: 10px; margin-bottom: 20px'>More Products</a>
             </div>
           </section>
         </section>
@@ -296,17 +304,17 @@
           <div class='reading__contact'>
             <div class='reading__contact__name'>Michael Erwin</div>
             <div class='reading__contact__detail'>phone: 773-555-1164</div>
-            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+            <div class='reading__contact__detail'>email: foo.email@careerbuilder.com</div>
           </div>
           <div class='reading__contact'>
-            <div class='reading__contact__name'>Michael Erwin</div>
+            <div class='reading__contact__name'>Stephenie Smith</div>
             <div class='reading__contact__detail'>phone: 773-555-1164</div>
-            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+            <div class='reading__contact__detail'>email: foo.email@careerbuilder.com</div>
           </div>
           <div class='reading__contact omega'>
-            <div class='reading__contact__name'>Michael Erwin</div>
+            <div class='reading__contact__name'>Abdullah Jones</div>
             <div class='reading__contact__detail'>phone: 773-555-1164</div>
-            <div class='reading__contact__detail'>email: jennifer.grasz@careerbuilder.com</div>
+            <div class='reading__contact__detail'>email: foo.email@careerbuilder.com</div>
           </div>
         </section>
       </div>
