--- a/simplified-cart.html
+++ b/simplified-cart.html
@@ -12,7 +12,7 @@
     <title>Your Cart | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/site-dfb27e61.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='simplified-cart base-background'>
     <div class='modal__background hidden' id='modal-background'></div>
@@ -316,7 +316,7 @@
         <div class='cart__row box--divider-bottom'>
           <div class='cart__cell cart--simplified__cell--title'>
             <!-- ITEM TITLE -->
-            ut natus fugiat repudiandae sed in nisi sit doloremque eos qui iure iste sit pariatur
+            ut at commodi blanditiis incidunt culpa qui qui officiis aut exercitationem aut nemo est sit
             <!-- ITEM QUANTITY -->
             (&nbsp;2&nbsp;)
           </div>
