--- a/solutions-page.html
+++ b/solutions-page.html
@@ -12,7 +12,7 @@
     <title>Solutions Page | CareerBuilder</title>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href="assets/stylesheets/site-4f712e2d.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/site-dfb27e61.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body class='solutions-page base-background'>
     <div class='modal__background hidden' id='modal-background'></div>
@@ -307,7 +307,7 @@
               <li>
                 <a href='#product2'>
                   <div class='text--link-list__arrow product-detail__arrow'>></div>
-                  <h3 style='text--headline-3 text--accent'>Product Title</h3>
+                  <h3 class='text--headline-3 text--accent'>Product Title</h3>
                 </a>
                 <p>Hellentesque sagittis condimentum, conveniently unnamed sources say.</p>
               </li>
@@ -320,7 +320,7 @@
               </li>
             </ul>
           </div>
-          <a class='button button--secondary' style='margin-top: 10px'>More Products</a>
+          <a class='button button--secondary' style='margin-top: 10px; margin-bottom: 20px'>More Products</a>
         </div>
       </section>
       <span id='demo-link-anchor'></span>
@@ -333,12 +333,12 @@
           <form class='form--large request-demo'>
             <!-- / Use div to indicate new row. Class "clear-fix" if required. -->
             <div>
-              <label class='columns-5'>
+              <label class='columns-6'>
                 First Name
                 <br>
                 <input type='text'>
               </label>
-              <label class='columns-6 shift-1'>
+              <label class='columns-6'>
                 Last Name
                 <br>
                 <input type='text'>
@@ -352,12 +352,12 @@
               </label>
             </div>
             <div>
-              <label class='columns-5'>
+              <label class='columns-6'>
                 Email Address
                 <br>
                 <input type='text'>
               </label>
-              <label class='columns-6 shift-1'>
+              <label class='columns-6'>
                 Phone Number
                 <br>
                 <input type='text'>
@@ -373,7 +373,7 @@
                 <textarea rows='4' style='width: 100%;'></textarea>
               </label>
             </div>
-            <div class='columns-4 shift-8' style='text-align: right; margin-right: 0'>
+            <div class='columns-4 shift-8 request-demo__submit'>
               <submit class='button button--primary'>
                 Submit
               </submit>
